<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/nano_app_names"
        android:layout_margin="14dp"
        android:gravity="center"
        android:textAlignment="center"
        android:fontFamily=""
        android:textSize="21sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="14dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/spotify_streamer_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/App1"
            android:layout_weight="1"
            android:textAllCaps="true"
            android:onClick="spotify_streamer"/>

        <Button
            android:id="@+id/scores_app_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/App2"
            android:layout_weight="1"
            android:textAllCaps="true"
            android:onClick="scores_app"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="14dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/library_app_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/App3"
            android:layout_weight="1"
            android:textAllCaps="true"
            android:onClick="library_app"/>

        <Button
            android:id="@+id/build_it_bigger_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/App4"
            android:layout_weight="1"
            android:textAllCaps="true"
            android:onClick="build_it_bigger"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="14dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/xyz_reader_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/App5"
            android:layout_weight="1"
            android:textAllCaps="true"
            android:onClick="xyz_reader"/>

        <Button
            android:id="@+id/capstone_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/App6"
            android:layout_weight="1"
            android:textAllCaps="true"
            android:onClick="capstone"/>

    </LinearLayout>

</LinearLayout>
